--- a/index.html
+++ b/index.html
@@ -4,10 +4,220 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css" />
+  <link rel="stylesheet" href="./styles/style.css" />
 </head>
 <body>
   <div class="page">
-
+    <header class="header">
+      <a href="/" class="logo logo_place-header">
+        <img src="./images/logo_place_header.svg" alt=" image is not found :(">
+      </a>
+      <h1 class="header__title">Научиться учиться</h1>
+      <div class="header__subtitle">
+        <p>
+          Какие современные и эффективные подходы
+          к обучению вы можете использовать в своей жизни?
+          <a href="/" class="header__link">Узнать &#8594;</a>
+        </p>
+      </div>
+      <img src="./images/header-image.png"
+      alt="image is not found :(" class="header__main-illustration">
+      <div class="header__square-pic"></div>
+    </header>
+    <section class="description">
+      <div class="two-columns">
+        <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">
+            Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
+            Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
+            чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания.
+            Зубрежка быстро выветривается и не приносит пользы.
+          </p>
+          <p class="two-columns__paragraph">
+            <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь,
+            но почему-то этому мало где учат.
+            Что с этим делать?
+          </p>
+          <p class="two-columns__paragraph">
+            Конкретные техники и упражнения помогают изменить подход к обучению,
+            сделать его эффективным и захватывающим. Эти же техники применяются
+            на примере обучения в Практикуме.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="digits">
+      <h2 class="section__title">Цифры и факты</h2>
+      <h3 class="section__subtitle">Про учёбу и мозг</h3>
+      <div class="table">
+        <div class="table__cell">
+          <h4 class="table__heading">86 миллиардов</h4>
+          <p class="table__text">Число нейронов в мозге человека</p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">2,1 миллиарда</h4>
+          <p class="table__text">Число нуждающихся в повышении квалификации</p>
+          <p class="table__text">Всемирный банк, 2017</p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">1000 терабайт</h4>
+          <p class="table__text">Объём памяти человека</p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">500 триллионов</h4>
+          <p class="table__text">
+            Число ответственных за обучение
+            нервных синапсов у взрослого человека
+          </p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">420 миллионов</h4>
+          <p class="table__text">
+            Число взрослых людей моложе 25 лет,
+            не имеющих образования для трудоустройства
+          </p>
+          <p class="table__text">Всемирный банк, 2017</p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">17-20 лет</h4>
+          <p class="table__text">Пик обучаемости</p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">1885 год</h4>
+          <p class="table__text">Открытие кривой забывания</p>
+        </div>
+        <div class="table__cell">
+          <h4 class="table__heading">1889 год</h4>
+          <p class="table__text">Открытие условного рефлекса</p>
+        </div>
+      </div>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <h3 class="feynman__subtitle"> Выучить и не забыть.</h3>
+      <a href="/" class="feynman__link">Подробнее &#8594;</a>
+      <img src="./images/feynman.png" alt="" class="feynman__background-pic">
+    </section>
+    <section class="kaufman">
+      <img src="./images/kaufman-triangle.svg" alt="" class="kaufman__triangle">
+      <h2 class="section__title table__text_theme_dark">Принципы обучения</h2>
+      <h3 class="section__subtitle table__text_theme_dark">от Джоша Кауфмана</h3>
+      <div class="table">
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">1</h4>
+          <p class="table__text">
+            Выберите привлекательный проект.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">2</h4>
+          <p class="table__text">
+            Сосредоточьтесь на каком-то одном навыке.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">3</h4>
+          <p class="table__text">
+            Определите целевой уровень мастерства.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">4</h4>
+          <p class="table__text">
+            Разбейте навык на элементы.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">5</h4>
+          <p class="table__text">
+            Приготовьте всё необходимое для занятий.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">6</h4>
+          <p class="table__text">
+            Устраните препятствия для занятий.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">7</h4>
+          <p class="table__text">
+            Выделите специальное время для занятий.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">8</h4>
+          <p class="table__text">
+            Создайте быстрые петли обратной связи.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">9</h4>
+          <p class="table__text">
+            Занимайтесь по расписанию,
+            короткими интенсивными интервалами.
+          </p>
+        </div>
+        <div class="table__cell_theme_dark">
+          <h4 class="table__heading">10</h4>
+          <p class="table__text">
+            Уделяйте внимание количеству и скорости.
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content-copyright">
+          <img src="./images/logo_place_footer.svg" alt="" class="logo logo_place-footer"/>
+          <p class="footer__author">&copy; Алена Малеткина</p>
+        </div>
+        <div class="footer__column footer__columns_content-info">
+          <h4 class="footer__column-heading">О Практикуме</h4>
+          <nav>
+          <ul class="footer__column-links" >
+            <li class="footer__column-link">
+              <a href="#" class="footer__link" target="_blank">Главная</a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__link" target="_blank">Концепция</a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__link" target="_blank">Наставники</a>
+            </li>
+          </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="footer__column footer__column_content-social">
+        <h4 class="footer__column-heading">Соцсети</h4>
+        <ul class="footer__column-links">
+          <li class="footer__column-link">
+            <a href="#" class="footer__link" target="_blank">
+              <img src="./images/facebook_color_white.svg" alt=""
+              class="footer__social-icon">
+              Facebook
+            </a>
+          </li>
+          <li class="footer__column-link">
+            <a href="#" class="footer__link" target="_blank">
+              <img src="./images/vk_color_white.svg" alt=""
+              class="footer__social-icon">
+              ВКонтакте
+            </a>
+          </li>
+          <li class="footer__column-link">
+            <a href="#" class="footer__link" target="_blank">
+              <img src="./images/instagram_color_white.svg" alt=""
+              class="footer__social-icon">
+              Instagram
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
