--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css" />
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="styles\normalize.css"/>
+  <link rel="stylesheet" href="styles\style.css"/>
 </head>
 <body>
   <div class="page">
     <header class="header">
       <a href="/" class="logo logo_place-header">
-        <img src="./images/logo_place_header.svg" alt=" image is not found :(">
+        <img src="./images/logo_place_header.svg" alt="Лого Яндекс">
       </a>
       <h1 class="header__title">Научиться учиться</h1>
       <div class="header__subtitle">
@@ -22,7 +22,7 @@
         </p>
       </div>
       <img src="./images/header-image.png"
-      alt="image is not found :(" class="header__main-illustration">
+      alt="Иллюстрация Опять-Два" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <section class="description">
@@ -98,10 +98,12 @@
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <h3 class="feynman__subtitle"> Выучить и не забыть.</h3>
       <a href="/" class="feynman__link">Подробнее &#8594;</a>
-      <img src="./images/feynman.png" alt="" class="feynman__background-pic">
+      <img src="./images/feynman.png" alt="Фото Фейнмана"
+      class="feynman__background-pic">
     </section>
     <section class="kaufman">
-      <img src="./images/kaufman-triangle.svg" alt="" class="kaufman__triangle">
+      <img src="./images/kaufman-triangle.svg" alt="Синий Треугольник"
+      class="kaufman__triangle">
       <h2 class="section__title table__text_theme_dark">Принципы обучения</h2>
       <h3 class="section__subtitle table__text_theme_dark">от Джоша Кауфмана</h3>
       <div class="table">
@@ -171,53 +173,54 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content-copyright">
-          <img src="./images/logo_place_footer.svg" alt="" class="logo logo_place-footer"/>
+          <img src="./images/logo_place_footer.svg" alt="Лого Яндекс"
+          class="logo logo_place-footer">
           <p class="footer__author">&copy; Алена Малеткина</p>
         </div>
         <div class="footer__column footer__columns_content-info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <nav>
-          <ul class="footer__column-links" >
-            <li class="footer__column-link">
-              <a href="#" class="footer__link" target="_blank">Главная</a>
-            </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__link" target="_blank">Концепция</a>
-            </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__link" target="_blank">Наставники</a>
-            </li>
-          </ul>
+            <ul class="footer__column-links">
+              <li class="footer__column-link">
+                <a href="#" class="footer__link" target="_blank">Главная</a>
+              </li>
+              <li class="footer__column-link">
+                <a href="#" class="footer__link" target="_blank">Концепция</a>
+              </li>
+              <li class="footer__column-link">
+                <a href="#" class="footer__link" target="_blank">Наставники</a>
+              </li>
+            </ul>
           </nav>
         </div>
-      </div>
-      <div class="footer__column footer__column_content-social">
-        <h4 class="footer__column-heading">Соцсети</h4>
-        <ul class="footer__column-links">
-          <li class="footer__column-link">
-            <a href="#" class="footer__link" target="_blank">
-              <img src="./images/facebook_color_white.svg" alt=""
-              class="footer__social-icon">
-              Facebook
-            </a>
-          </li>
-          <li class="footer__column-link">
-            <a href="#" class="footer__link" target="_blank">
-              <img src="./images/vk_color_white.svg" alt=""
-              class="footer__social-icon">
-              ВКонтакте
-            </a>
-          </li>
-          <li class="footer__column-link">
-            <a href="#" class="footer__link" target="_blank">
-              <img src="./images/instagram_color_white.svg" alt=""
-              class="footer__social-icon">
-              Instagram
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+        <div class="footer__column footer__column_content-social">
+          <h4 class="footer__column-heading">Соцсети</h4>
+          <ul class="footer__column-links">
+            <li class="footer__column-link">
+              <a href="#" class="footer__link" target="_blank">
+                <img src="./images/facebook_color_white.svg" alt="Мини-Лого"
+                class="footer__social-icon">
+                Facebook
+              </a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__link" target="_blank">
+                <img src="./images/vk_color_white.svg" alt="Мини-Лого"
+                class="footer__social-icon">
+                ВКонтакте
+              </a>
+            </li>
+            <li class="footer__column-link">
+              <a href="#" class="footer__link" target="_blank">
+                <img src="./images/instagram_color_white.svg" alt="Мини-Лого"
+                class="footer__social-icon">
+                Instagram
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </div>
 </body>
 </html>
