--- a/index.html
+++ b/index.html
@@ -10,24 +10,22 @@
 <body>
   <div class="page">
     <header class="header">
-      <a href="/" class="logo logo_place-header">
+      <a href="/" class="logo logo_place_header">
         <img src="./images/logo_place_header.svg" alt="Лого Яндекс">
       </a>
       <h1 class="header__title">Научиться учиться</h1>
-      <div class="header__subtitle">
-        <p>
+      <p class="header__subtitle">
           Какие современные и эффективные подходы
           к обучению вы можете использовать в своей жизни?
           <a href="/" class="header__link">Узнать &#8594;</a>
-        </p>
-      </div>
+      </p>
       <img src="./images/header-image.png"
       alt="Иллюстрация Опять-Два" class="header__main-illustration">
       <div class="header__square-pic"></div>
     </header>
     <section class="description">
       <div class="two-columns">
-        <h4 class="two-columns__brief">Главные проблемы в обучении</h4>
+        <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">
             Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
@@ -49,8 +47,8 @@
       </div>
     </section>
     <section class="digits">
-      <h2 class="section__title">Цифры и факты</h2>
-      <h3 class="section__subtitle">Про учёбу и мозг</h3>
+      <h2 class="section-title">Цифры и факты</h2>
+      <h3 class="section-subtitle">Про учёбу и мозг</h3>
       <div class="table">
         <div class="table__cell">
           <h4 class="table__heading">86 миллиардов</h4>
@@ -102,69 +100,68 @@
       class="feynman__background-pic">
     </section>
     <section class="kaufman">
-      <img src="./images/kaufman-triangle.svg" alt="Синий Треугольник"
-      class="kaufman__triangle">
-      <h2 class="section__title table__text_theme_dark">Принципы обучения</h2>
-      <h3 class="section__subtitle table__text_theme_dark">от Джоша Кауфмана</h3>
-      <div class="table">
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">1</h4>
-          <p class="table__text">
+      <div class="kaufman__triangle"></div>
+      <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
+      <h3 class="section-subtitle section-subtitle__theme-dark">от Джоша Кауфмана</h3>
+      <div class="table table_theme_dark">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">1</h4>
+          <p class="table__text table__text_theme_dark">
             Выберите привлекательный проект.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">2</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">2</h4>
+          <p class="table__text table__text_theme_dark">
             Сосредоточьтесь на каком-то одном навыке.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">3</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">3</h4>
+          <p class="table__text table__text_theme_dark">
             Определите целевой уровень мастерства.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">4</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">4</h4>
+          <p class="table__text table__text_theme_dark">
             Разбейте навык на элементы.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">5</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">5</h4>
+          <p class="table__text table__text_theme_dark">
             Приготовьте всё необходимое для занятий.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">6</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">6</h4>
+          <p class="table__text table__text_theme_dark">
             Устраните препятствия для занятий.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">7</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">7</h4>
+          <p class="table__text table__text_theme_dark">
             Выделите специальное время для занятий.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">8</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">8</h4>
+          <p class="table__text table__text_theme_dark">
             Создайте быстрые петли обратной связи.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">9</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">9</h4>
+          <p class="table__text table__text_theme_dark">
             Занимайтесь по расписанию,
             короткими интенсивными интервалами.
           </p>
         </div>
-        <div class="table__cell_theme_dark">
-          <h4 class="table__heading">10</h4>
-          <p class="table__text">
+        <div class="table__cell table__cell_theme_dark">
+          <h4 class="table__heading table__heading_theme_dark">10</h4>
+          <p class="table__text table__text_theme_dark">
             Уделяйте внимание количеству и скорости.
           </p>
         </div>
@@ -172,46 +169,45 @@
     </section>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column_content-copyright">
-          <img src="./images/logo_place_footer.svg" alt="Лого Яндекс"
-          class="logo logo_place-footer">
+        <div class="footer__column footer__column_content_copyright">
+          <a href="/" class="logo logo_place-footer">
+            <img src="./images/logo_place_footer.svg" alt="Лого Яндекс">
+          </a>
           <p class="footer__author">&copy; Алена Малеткина</p>
         </div>
-        <div class="footer__column footer__columns_content-info">
+        <nav class="footer__column footer__columns_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
-          <nav>
             <ul class="footer__column-links">
-              <li class="footer__column-link">
-                <a href="#" class="footer__link" target="_blank">Главная</a>
+              <li>
+                <a href="#" class="footer__column-link" target="_blank">Главная</a>
               </li>
-              <li class="footer__column-link">
-                <a href="#" class="footer__link" target="_blank">Концепция</a>
+              <li>
+                <a href="#" class="footer__column-link" target="_blank">Концепция</a>
               </li>
-              <li class="footer__column-link">
-                <a href="#" class="footer__link" target="_blank">Наставники</a>
+              <li>
+                <a href="#" class="footer__column-link" target="_blank">Наставники</a>
               </li>
             </ul>
-          </nav>
-        </div>
-        <div class="footer__column footer__column_content-social">
+        </nav>
+        <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__column-links">
-            <li class="footer__column-link">
-              <a href="#" class="footer__link" target="_blank">
+            <li>
+              <a href="#" class="footer__column-link" target="_blank">
                 <img src="./images/facebook_color_white.svg" alt="Мини-Лого"
                 class="footer__social-icon">
                 Facebook
               </a>
             </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__link" target="_blank">
+            <li>
+              <a href="#" class="footer__column-link" target="_blank">
                 <img src="./images/vk_color_white.svg" alt="Мини-Лого"
                 class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
-            <li class="footer__column-link">
-              <a href="#" class="footer__link" target="_blank">
+            <li>
+              <a href="#" class="footer__column-link" target="_blank">
                 <img src="./images/instagram_color_white.svg" alt="Мини-Лого"
                 class="footer__social-icon">
                 Instagram
