--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
   <div class="page">
     <header class="header">
-      <a href="/" class="logo logo_place_header">
+      <a href="#" class="logo logo_place_header">
         <img src="./images/logo_place_header.svg" alt="Лого Яндекс">
       </a>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">
           Какие современные и эффективные подходы
           к обучению вы можете использовать в своей жизни?
-          <a href="/" class="header__link">Узнать &#8594;</a>
+          <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
       <img src="./images/header-image.png"
       alt="Иллюстрация Опять-Два" class="header__main-illustration">
@@ -49,128 +49,128 @@
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
       <h3 class="section-subtitle">Про учёбу и мозг</h3>
-      <div class="table">
-        <div class="table__cell">
+      <ul class="table">
+        <li class="table__cell">
           <h4 class="table__heading">86 миллиардов</h4>
           <p class="table__text">Число нейронов в мозге человека</p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">2,1 миллиарда</h4>
           <p class="table__text">Число нуждающихся в повышении квалификации</p>
           <p class="table__text">Всемирный банк, 2017</p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">1000 терабайт</h4>
           <p class="table__text">Объём памяти человека</p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">500 триллионов</h4>
           <p class="table__text">
             Число ответственных за обучение
             нервных синапсов у взрослого человека
           </p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">420 миллионов</h4>
           <p class="table__text">
             Число взрослых людей моложе 25 лет,
             не имеющих образования для трудоустройства
           </p>
           <p class="table__text">Всемирный банк, 2017</p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">17-20 лет</h4>
           <p class="table__text">Пик обучаемости</p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">1885 год</h4>
           <p class="table__text">Открытие кривой забывания</p>
-        </div>
-        <div class="table__cell">
+        </li>
+        <li class="table__cell">
           <h4 class="table__heading">1889 год</h4>
           <p class="table__text">Открытие условного рефлекса</p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <h3 class="feynman__subtitle"> Выучить и не забыть.</h3>
-      <a href="/" class="feynman__link">Подробнее &#8594;</a>
+      <a href="#" class="feynman__link">Подробнее &#8594;</a>
       <img src="./images/feynman.png" alt="Фото Фейнмана"
       class="feynman__background-pic">
     </section>
     <section class="kaufman">
       <div class="kaufman__triangle"></div>
-      <h2 class="section-title section-title__theme_dark">Принципы обучения</h2>
-      <h3 class="section-subtitle section-subtitle__theme-dark">от Джоша Кауфмана</h3>
-      <div class="table table_theme_dark">
-        <div class="table__cell table__cell_theme_dark">
+      <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+      <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
+      <ul class="table table_theme_dark">
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">1</h4>
           <p class="table__text table__text_theme_dark">
             Выберите привлекательный проект.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">2</h4>
           <p class="table__text table__text_theme_dark">
             Сосредоточьтесь на каком-то одном навыке.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">3</h4>
           <p class="table__text table__text_theme_dark">
             Определите целевой уровень мастерства.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">4</h4>
           <p class="table__text table__text_theme_dark">
             Разбейте навык на элементы.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">5</h4>
           <p class="table__text table__text_theme_dark">
             Приготовьте всё необходимое для занятий.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">6</h4>
           <p class="table__text table__text_theme_dark">
             Устраните препятствия для занятий.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">7</h4>
           <p class="table__text table__text_theme_dark">
             Выделите специальное время для занятий.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">8</h4>
           <p class="table__text table__text_theme_dark">
             Создайте быстрые петли обратной связи.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">9</h4>
           <p class="table__text table__text_theme_dark">
             Занимайтесь по расписанию,
             короткими интенсивными интервалами.
           </p>
-        </div>
-        <div class="table__cell table__cell_theme_dark">
+        </li>
+        <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">10</h4>
           <p class="table__text table__text_theme_dark">
             Уделяйте внимание количеству и скорости.
           </p>
-        </div>
-      </div>
+        </li>
+      </ul>
     </section>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <a href="/" class="logo logo_place-footer">
+          <a href="#" class="logo logo_place_footer">
             <img src="./images/logo_place_footer.svg" alt="Лого Яндекс">
           </a>
           <p class="footer__author">&copy; Алена Малеткина</p>
@@ -194,21 +194,21 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__column-link" target="_blank">
-                <img src="./images/facebook_color_white.svg" alt="Мини-Лого"
+                <img src="./images/facebook_color_white.svg" alt="Мини-Лого Фейсбук"
                 class="footer__social-icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link" target="_blank">
-                <img src="./images/vk_color_white.svg" alt="Мини-Лого"
+                <img src="./images/vk_color_white.svg" alt="Мини-Лого ВКонтакте"
                 class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link" target="_blank">
-                <img src="./images/instagram_color_white.svg" alt="Мини-Лого"
+                <img src="./images/instagram_color_white.svg" alt="Мини-Лого Инстаграм"
                 class="footer__social-icon">
                 Instagram
               </a>
