--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
       <ul class="cards">
         <li class="cards__item">
-          <div class="cards__image cards__image_pic_attention"></div>
+          <img src="images/cards-attention.png" alt="Изображение книги" class="cards__image">
           <h4 class="cards__title">Два вида внимания</h4>
           <p class="cards__description">
             Глубокие знания возникают, если чередовать
@@ -58,7 +58,7 @@
           </p>
         </li>
         <li class="cards__item">
-          <div class="cards__image cards__image_pic_recall"></div>
+          <img src="images/cards-recall.png" alt="Изображение скульптуры" class="cards__image">
           <h4 class="cards__title">Recall</h4>
           <p class="cards__description">
             Вспоминайте изученное — это позволит
@@ -66,7 +66,7 @@
           </p>
         </li>
         <li class="cards__item">
-          <div class="cards__image cards__image_pic_interliving"></div>
+          <img src="images/cards-interliving.png" alt="Изображение мемориала" class="cards__image">
           <h4 class="cards__title">Интерливинг</h4>
           <p class="cards__description">
             Изучайте несколько навыков одновременно,
@@ -74,7 +74,7 @@
           </p>
         </li>
         <li class="cards__item">
-          <div class="cards__image cards__image_pic_question"></div>
+          <img src="images/cards-question.png" alt="Изображение помещения" class="cards__image">
           <h4 class="cards__title">Вопросы</h4>
           <p class="cards__description">
             Слушая преподавателя, придумывайте хороший вопрос,
@@ -82,7 +82,7 @@
           </p>
         </li>
         <li class="cards__item">
-          <div class="cards__image cards__image_pic_competence"></div>
+          <img src="images/cards-competence.png" alt="Изображение нескольких книг" class="cards__image">
           <h4 class="cards__title">Иллюзия компетентности</h4>
           <p class="cards__description">
             Повторите про себя, запишите, расскажите другу:
@@ -96,13 +96,13 @@
       <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
       <ul class="video__iframes">
         <li class="video__iframe">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          <iframe height="316px" width="515px"  src="https://www.youtube.com/embed/5MgBikgcWnY"
           title="YouTube video player" style="border:0;"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         </li>
         <li class="video__iframe">
-          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+          <iframe height="316px" width="515px" src="https://www.youtube.com/embed/arj7oStGLkU"
           title="YouTube video player" style="border:0;"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
