--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
       <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
       <ul class="video__iframes">
         <li class="video__iframe">
-          <iframe height="316px" width="515px"  src="https://www.youtube.com/embed/5MgBikgcWnY"
+          <iframe height="316" width="515"  src="https://www.youtube.com/embed/5MgBikgcWnY"
           title="YouTube video player" style="border:0;"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         </li>
         <li class="video__iframe">
-          <iframe height="316px" width="515px" src="https://www.youtube.com/embed/arj7oStGLkU"
+          <iframe height="316" width="515" src="https://www.youtube.com/embed/arj7oStGLkU"
           title="YouTube video player" style="border:0;"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
