--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <p class="header__subtitle">
           Какие современные и эффективные подходы
           к обучению вы можете использовать в своей жизни?
-          <a href="#" class="header__link">Узнать &#8594;</a>
+          <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
       <img src="./images/header-image.png"
       alt="Иллюстрация Опять-Два" class="header__main-illustration">
       <div class="header__square-pic rotation"></div>
     </header>
     <section class="description">
-      <div class="two-columns">
+      <article class="two-columns">
         <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">
@@ -43,11 +43,11 @@
             на примере обучения в Практикуме.
           </p>
         </div>
-      </div>
+      </article>
     </section>
     <section class="techniques">
       <h2 class="section-title">Техники обучения</h2>
-      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+      <p class="section-subtitle">Пять практик от Барбары Оакли</p>
       <ul class="cards">
         <li class="cards__item">
           <img src="images/cards-attention.png" alt="Изображение книги" class="cards__image">
@@ -93,24 +93,24 @@
     </section>
     <section class="video">
       <h2 class="section-title">Видео нa TED</h2>
-      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
       <ul class="video__iframes">
-        <li class="video__iframe">
-          <iframe height="316" width="515"  src="https://www.youtube.com/embed/5MgBikgcWnY"
-          title="YouTube video player" style="border:0;"
+        <li>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         </li>
-        <li class="video__iframe">
-          <iframe height="316" width="515" src="https://www.youtube.com/embed/arj7oStGLkU"
-          title="YouTube video player" style="border:0;"
+        <li>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
+          title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
         </li>
       </ul>
     </section>
     <section class="oakley">
-      <div class="two-columns">
+      <article class="two-columns">
         <h2 class="two-columns__brief">История Барбары Оакли.</h2>
         <div class="two-columns__main-text">
           <p class="two-columns__paragraph">
@@ -121,18 +121,18 @@
             трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
           </p>
         </div>
-      </div>
+      </article>
     </section>
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle"> Выучить и не забыть.</h3>
-      <a href="#" class="feynman__link">Подробнее &#8594;</a>
+      <p class="feynman__subtitle"> Выучить и не забыть.</p>
+      <a href="#" class="feynman__link">Подробнее &rarr;</a>
       <img src="./images/feynman.png" alt="Фото Фейнмана"
       class="feynman__background-pic">
     </section>
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
-      <h3 class="section-subtitle">Про учёбу и мозг</h3>
+      <p class="section-subtitle">Про учёбу и мозг</p>
       <ul class="table">
         <li class="table__cell">
           <h4 class="table__heading">86 миллиардов</h4>
@@ -178,26 +178,28 @@
     </section>
     <section class="khan">
       <div class="khan__container">
-        <h3 class="khan__author">Салман Хан</h3>
+        <p class="khan__author">Салман Хан</p>
         <h2 class="khan__title">Весь мир — школа</h2>
-        <p class="khan__quote">
+        <blockquote class="khan__quote">
+          <p>
           Страсть и новаторство Сала Хана меняют процесс обучения миллионов
           студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
           кто занимается образованием — так учащиеся повсюду смогут получить навыки
           и знания, которые приносят успех в школе, карьере и жизни.
-        </p>
-        <h3 class="khan__quote-author">Джордж Лукас</h3>
-        <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
+          </p>
+        </blockquote>
+        <p class="khan__quote-author">Джордж Лукас</p>
+        <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
         <div class="khan__book-container">
           <img src="./images/khan-book.jpg" alt="Обложка книги" class="khan__book-pic">
-          <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+          <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
         </div>
       </div>
     </section>
     <section class="kaufman">
       <div class="kaufman__triangle rotation"></div>
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-      <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
+      <p class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</p>
       <ul class="table table_theme_dark">
         <li class="table__cell table__cell_theme_dark">
           <h4 class="table__heading table__heading_theme_dark">1</h4>
@@ -264,7 +266,7 @@
     </section>
     <section class="resources">
       <h2 class="section-title">Полезные ресурсы</h2>
-      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
       <ul class="resources__logo-zone">
         <li class="resources__link">
           <a href="#" target="_blank">
