update author in index.html

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <p class="footer__author">&copy; moonxmochi</p>
+          <p class="footer__author">&copy; m0chimoon</p>
         </div>
         <div class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Socials</h4>
